--- a/rel/5/rel5.tex
+++ b/rel/5/rel5.tex
@@ -20,13 +20,13 @@
 	\singlespacing
 	\begin{midpage}
 	\begin {large}
-		Relatório Experimento 4
+		Relatório Experimento 5
 		\singlespace
-		Circuitos Codificadores
+		Circuitos Multiplexadores e Demultiplexadores
 	\end {large}
 	\end{midpage}
 }
-\date{Setembro 23, 2016}
+\date{Outubro 04, 2016}
 \usepackage{indentfirst}
 \usepackage{setspace}
 \usepackage{verbatim}
@@ -78,8 +78,6 @@ Eduardo Nunes & 14/0056189 & \\
 Introdução, indicando a delimitação do tema, apresentando a justificativa descrevendo o propósito do relatório.
 \fi
 
-	 Neste relatorio e apresentado o resultado do experimento realizado na aula da prática da eletrônica digital 1. São apresentados os mapas de Karnaugh, o código vhdl e a saída em forma de onda. Para este experimento foi utilizado a ferramenta \textit{Ise design suite}.
-
 \section{Experimentos}
 \iffalse
 Parte Experimental, descrevendo os passos realizados, dificuldades e soluções para os problemas encontrados. Aqui, deve-se apresentar uma descrição dos resultados encontrados em forma de figuras, gráficos e tabelas.
@@ -87,156 +85,6 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 
 \subsection{Experimento 01}
 \singlespacing
-
-	O primeiro experimento tratou-se da implementação de um circuito a partir da tabela verdade. A dupla teve de identificar os mintermos e elaborar mapas de Karnaugh para alcançar as funções lógicas simplificadas.
-	
-	Para a realização do experimento em sala de aula, foi despresado os valores hexadecimais referenstes ao display de 7 segmentos, ou seja, que utilizassemos apenas os dez primeiros valores da tabela que representam os algarismos de 0 à 9. 
-	
-	Segue abaixo, respectivamente: Mapas de Karnaugh, Código vhdl, diagrama esquemático e saída obtida em forma de onda.
-\singlespacing
-
-\subsection{Mapas de Karnaugh}
-
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 0 & 1 & 1\\
-		\hline
-		\textbf{01} & 0 & 1 & 1 & 1\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida A. Equação: A = C + A + !B!D + BD }
-	\end{table}
-	\singlespacing
-
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 1 & 1 & 1\\
-		\hline
-		\textbf{01} & 1 & 0 & 1 & 0\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida B. Equação: B = !B + !C!D + CD }
-\end{table}
-	
-\singlespacing
-
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 0 & 1 & 1\\
-		\hline
-		\textbf{01} & 0 & 1 & 0 & 1\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida C. Equação: C = !C + B + D }
-	\end{table}
-	\singlespacing
-	
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 0 & 1 & 1\\
-		\hline
-		\textbf{01} & 0 & 1 & 0 & 1\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida D. Equação: C = !C + B + D }
-	\end{table}
-	\singlespacing
-	
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 0 & 1 & 1\\
-		\hline
-		\textbf{01} & 0 & 1 & 0 & 1\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida E. Equação: C = !C + B + D }
-	\end{table}
-	\singlespacing
-
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 0 & 1 & 1\\
-		\hline
-		\textbf{01} & 0 & 1 & 0 & 1\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida F. Equação: C = !C + B + D }
-	\end{table}
-	\singlespacing
-	
-\begin{table}[h]
-\begin{center}
-	\begin{tabular}{|l|l|l|l|l|}
-		\hline
-		\textbf{AB/CD} & \textbf{00} & \textbf{01} & \textbf{11} & \textbf{10}\\
-		\hline
-		\textbf{00} & 1 & 0 & 1 & 1\\
-		\hline
-		\textbf{01} & 0 & 1 & 0 & 1\\
-		\hline
-		\textbf{11} & X & X & X & X\\
-		\hline
-		\textbf{10} & 1 & 1 & X & X\\
-		\hline
-	\end{tabular}
-\end{center}
-	\caption{Mapa de Karnaugh da saida G. Equação: C = !C + B + D }
-	\end{table}
-	\singlespacing
 
 \clearpage
 \subsection{Código VHDL}
@@ -246,7 +94,7 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 \subsection{Diagrama Esquemático}
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.6]{imagens/circuito}
+  \includegraphics[scale=0.45]{imagens/circuito1}
   \caption{Diagrama do circuito codificador - Ise Design Suite 14.7}	
   \label{figRotulo}
 \end{figure}
@@ -256,7 +104,7 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.35]{imagens/onda}
+  \includegraphics[scale=0.35]{imagens/onda1}
   \caption{Diagrama de ondas do circuito codificador - Ise Design Suite 14.7}
   \label{figRotulo}
 \end{figure}
@@ -267,18 +115,10 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
 \fi
 
-	Com a realização deste experimento foi possível adquirir conhecimento a respeito do mapa de Karnaugh. Também foi possível entender que a \textit{concepção} de um circuito de forma manual e implementação em código VHDL pode ser bem distinta, porém o objetivo alcançado é o mesmo. Na realização do experimento foram simplificadas todas as funções lógicas, porém a implementação no vhdl foi feita com estruturas condicionais.
-
-	Todas os resultados apresentados nas saídas do experimento foram de acordo com o esperado.
-
 \section{Conclusões}
 \iffalse
 Conclusões, mostrando os êxitos e eventuais problemas encontrados na realização do experimento, indicando as limitações, apresentando recomendações e/ou sugestões.
 \fi
-
-	Neste quarto relatório foi possível realizar o experimento com êxito. A compreensão da necessidade de simplificação de funções lógicas pode ser alcançada juntamente com o aprendizado de novas formas de implementação de circuitos em VHDL.
-
-
 
 \section{Referências Bibliográficas}
 \iffalse
