Add pesquisa bibliográfica pre6

--- a/pre/6/pre6.tex
+++ b/pre/6/pre6.tex
@@ -52,9 +52,48 @@ Eduardo Nunes & 140056149 & \\
 
 \pagebreak
 
-\section{Projetos e Simulações}
+\section{Pesquisa bibliográfica}
 
 	Na seção a seguir contém as atividades pedidas para a elaboração do pré-relatório.
+\singlespacing
+\textit{\textbf{A)} As formas de alimentação suportadas pela placa, os níveis de tensão e corrente envolvidos e como esta configuração é feita:}
+
+
+\textbf{ Formas de alimentação:} A placa Basys3 pode receber energia da porta Digilent USB-JTAG(J4) ou a partir de uma fonte de alimentação externa 5V.
+\singlespacing
+\textbf{Níveis de tensão:} É necessário limitar a tensão máxima da bateria externa a 5.5V DC. A tensão mínima da bateria depende da aplicação; se a função de host USB (J2) estiver sendo utilizada, pelo menos,
+4.6V deve ser fornecida. Em outros casos, a voltagem mínima é de 3.6V.
+\singlespacing
+\textbf{Corrente envolvidas:} É necessário 3.3, 1.8V e suprimentos de 1.0V a partir da entrada 5V de alimentação principal.
+\singlespacing
+\textbf{Para configurar o FPGA, há três maneiras:}
+\singlespacing
+1. O PC pode usar o circuito Digilent USB-JTAG (portJ4, identificado como "PROG") para programar o FPGA para que a qualquer momento o aparelho esteja ligado.
+\singlespacing
+2. Um ficheiro armazenado no de série (SPI) dispositivo flash não volátil pode ser transferido para o FPGA usando a porta SPI.
+\singlespacing
+3. Um arquivo de programação podem ser transferidos a partir de um cartão de memória USB ligado ao HID USB port.
+\singlespacing
+\textit{\textbf{B)} As formas de programação suportadas pela placa e como elas podem ser configuradas:}
+        Você pode programar o FPGA a partir de um pen drive conectado à porta USB-HID (J2). Ou através da programação JTAG pode ser feito usando o servidor de hardware em Vivado. Ou com um circuito que pode programar dispositivos flash.
+\singlespacing
+\textit{\textbf{C)} As formas de armazenamento do bitstream na placa (tipos de memória):}
+        A placa Basys3 contém um dispositivo serial flash 32Mbit não-volátil, que está ligado ao FPGA Artix 7 usando um quad-modo dedicado (x4) barramento SPI.
+\singlespacing
+\textit{\textbf{D}) A quantidade e frequência dos clocks disponíveis:}
+A placa Basys3 inclui um único oscilador de 100MHz conectada ao pino W5 (W5 é uma entrada no banco de MRCC 34).
+\singlespacing
+\textit{\textbf{E)} A identificação (nome) dos pinos usados para as entradas da placa (chaves e pushbuttons) e para as saídas (LEDs e displays de 7-segmentos):}
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=0.3]{imagens/identificacaoPinos.png}
+  \caption{Identificação dos pinos - Ise Design Suit 14.7}
+  \label{figRotulo}
+\end{figure}
+
+
+\section{Projetos e simulações}
+
 \iffalse	
 \subsection{Projeto1 - Decodificador com Mux}
 \subsubsection{Diagrama Esquemático}
@@ -63,7 +102,7 @@ Eduardo Nunes & 140056149 & \\
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.7	]{imagens/esquematico_projeto1}
+  \includegraphics[scale=0.3	]{imagens/esquematico_projeto1}
   \caption{Diagrama 1 - Ise Design Suit 14.7}
   \label{figRotulo}
 \end{figure}
