--- a/rel/5/rel5.tex
+++ b/rel/5/rel5.tex
@@ -83,8 +83,13 @@ Introdução, indicando a delimitação do tema, apresentando a justificativa de
 Parte Experimental, descrevendo os passos realizados, dificuldades e soluções para os problemas encontrados. Aqui, deve-se apresentar uma descrição dos resultados encontrados em forma de figuras, gráficos e tabelas.
 \fi
 
+	Neste relatório é apresentado o resultado dos experimentos realizados na aula prática de eletrônica digital 1. São apresentados o código VHDL assim como as saidas em forma de onda e o diagrama do circuito. 
+
 \subsection{Experimento 01}
 \singlespacing
+	O primeiro experimento tratou-se de projetar e simular um circuito que implemente a função: f(A,B,C) = !AB + !ABC + ABC. Utilizando um multiplexidor de quatro entradas e uma saída (Mux 4:1).
+
+	Acompanham abaixo o código VHDL, diagrama do circuito e a saída em forma de onda:
 
 \clearpage
 \subsection{Código VHDL}
@@ -110,15 +115,24 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 \end{figure}
 \newpage
 
+\subsection{Experimento 02}
+	O segundo experimento tratou-se de projetar e simular um circuito que implemente a mesma função do experiemnto 01. Utilizando um Demux:2, Mux:2 e uma porta OR.
+
+
+
 \section{Discussão}
 \iffalse
 Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
 \fi
 
+Com a realização deste experimento foi possível adquirir conhecimento a respeito de multiplexador e demultiplexado.
+
 \section{Conclusões}
 \iffalse
 Conclusões, mostrando os êxitos e eventuais problemas encontrados na realização do experimento, indicando as limitações, apresentando recomendações e/ou sugestões.
 \fi
+
+        Neste quarto relatório foi possível realizar o primeiro experimento com êxito. Porém, em relação ao segundo experimento tivemos muita dificuldade na implementação do circuito e por conta disto não conseguimos implementa lo.
 
 \section{Referências Bibliográficas}
 \iffalse
