Add rel06 completo

--- a/rel/6/rel6.tex
+++ b/rel/6/rel6.tex
@@ -96,7 +96,7 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 \clearpage
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.45]{imagens/erro1}
+  \includegraphics[scale=0.30]{imagens/tretaMemoria.png}
   \caption{Mensagens do primeiro erro - Vivado}	
   \label{figRotulo}
 \end{figure}
@@ -104,7 +104,7 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 \clearpage
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.45]{imagens/erro2}
+  \includegraphics[scale=0.30]{imagens/tretaPermissao.png}
   \caption{Mensagens do segundo erro - Vivado}	
   \label{figRotulo}
 \end{figure}
@@ -116,12 +116,14 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 \iffalse
 Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
 \fi
-
+      Neste sexto relatório não foi possível realizar o experimento com êxito devido aos fatores apresentados acima. Ficamos muito frustrados com este resultado, porém já tomamos medidas para que estes tipos de imprevistos não ocorram novamente e nos prejudique como prejudicou neste experimento seis.
 
 \section{Conclusões}
 \iffalse
 Conclusões, mostrando os êxitos e eventuais problemas encontrados na realização do experimento, indicando as limitações, apresentando recomendações e/ou sugestões.
 \fi
+
+Com a realização deste experimento não conseguimos obter resultados positivos. Porém, ganhamos experiência para poder tentar evitar estes tipos de imprevistos e acabamos por entender a parte teórica do funcionamento da FPGA, conhecimento este passado na aula prática e na realização do pré relatório 06. 
 
 \section{Referências Bibliográficas}
 \iffalse
