--- a/final/relFinal.tex
+++ b/final/relFinal.tex
@@ -78,14 +78,14 @@ Eduardo Nunes & 14/0056189 & \\
 Introdução, indicando a delimitação do tema, apresentando a justificativa descrevendo o propósito do relatório.
 \fi
 
-\section{Experimentos}
+	Neste relatório é apresentado o resultado do projeto de um Gerador de números aleatórios para a disciplina de prática de eletrônica digital 1. São apresentados o funcionamento do projeto, com representações em imagens, as especificações das entradas e saídas utilizadas no kit BASYS3, juntamente, com o arquivo de restrição, o código VHDL assimm como diagrama do circuito. 
+
+
+\section{Projeto}
 \iffalse
 Parte Experimental, descrevendo os passos realizados, dificuldades e soluções para os problemas encontrados. Aqui, deve-se apresentar uma descrição dos resultados encontrados em forma de figuras, gráficos e tabelas.
 \fi
 
-	Neste relatório é apresentado o resultado do projeto de um Gerador de números aleatórios para a disciplina de prática de eletrônica digital 1. São apresentados o funcionamento do projeto, com representações em imagens, as especificações das entradas e saídas utilizadas no kit BASYS3, juntamente, com o arquivo de restrição, o código VHDL assimm como diagrama do circuito. 
-
-\ection{Projeto}
 \singlespacing
 
 \subsection{Objetivo}
@@ -100,32 +100,27 @@ números aleatórios.
 \lstinputlisting[language=vhdl]{projeto/projeto1.vhd}
 
 \clearpage
-\subsection{Diagrama Esquemático}
+\subsection{Diagrama do circuito}
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.45]{imagens/circuito1}
-  \caption{Esquemático projeto 1- Ise Design Suite 14.7}	
+  \includegraphics[scale=0.45]{imagens/circuito}
+  \caption{Diagrama do circuito de um gerador de números aleatórios}	
   \label{figRotulo}
 \end{figure}
 
 \newpage
-\subsection{Diagrama de Onda}
 
-\begin{figure}[!htb]
-  \centering
-  \includegraphics[scale=0.35]{imagens/onda1}
-  \caption{Diagrama de ondas projeto 1- Ise Design Suite 14.7}
-  \label{figRotulo}
-\end{figure}
-\newpage
+\subsection{Resultados}
+
+\subsection{Metodologia de testes}
+
 
 \section{Discussão}
 \iffalse
 Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
 \fi
 
-        Neste quinto relatório foi possível realizar o primeiro experimento com êxito. Porém, em relação ao segundo experimento tivemos dificuldade na implementação do circuito pois o código em VHDL não correspondia ao resultado esperado quando verificado o diagrama em forma de onda. Para solucionar foi utilizado mais um \textit{signal} e as atribuições para a saida foram feitas fora do \textit{process}.
-        
+        Neste projeto final foi possível realizar o primeiro experimento com êxito.         
         A solução que alcançou o resultado esperado é a referente à \textbf{versão 2}. Pode-se observar que a implementação do circuito é abstraída para um multiplexador após a implementação do circuito.
 
 \section{Conclusões}
