--- a/final/relFinal.tex
+++ b/final/relFinal.tex
@@ -89,15 +89,16 @@ Parte Experimental, descrevendo os passos realizados, dificuldades e soluções 
 \singlespacing
 
 \subsection{Objetivo}
-	O objetivo deste projeto é implementar um gerador de números aleatórios de 2 elevado a "m" − 1 estados.	Um gerador de números aleatórios é um algoritmo que gera uma sequência de números, os quais são aproximadamente independentes um dos outros. A saída da maioria dos geradores de números
+	O objetivo deste projeto é implementar um gerador de números aleatórios de 2 elevado a m, menos 1 estados. Um gerador de números aleatórios é um algoritmo que gera uma sequência de números, os quais são aproximadamente independentes um dos outros. A saída da maioria dos geradores de números
 aleatórios não é verdadeiramente aleatória, ela somente aproxima algumas das propriedades dos
 números aleatórios.
-	
-\subsection{Fluxograma}
+		
+\subsection{Funcionamento}
+	O projeto funciona da seguinte forma: O primeiro passo é transformar o valor binário do grupo, no caso o k (variável que seleciona um grupo de até 16 bits). Logo, em seguida a opção de ativar o modo de geração de um número, opção de nível baixo, ou de validar a geração, nível alto. Supondo se que foi selecionado a opção de gerar um número aleatório, então o projeto aplica a geração aleatória. Em seguida, da o shift nos bits de borda de subida, deslocando assim os bit que pode ser com base em um clock ou de uma chave seletora. Este faz a verificação de se os 4 últimos digitos forem iguais ao valor a variavél que seleciona o valor, no caso S. Então, há a contagem de quantas vezes o valor de S aparece no vetor. Logo em seguida, o resultado é exposto no display.
 
 \clearpage
 \subsection{Código VHDL}
-\lstinputlisting[language=vhdl]{projeto/projeto1.vhd}
+\lstinputlisting[language=vhdl]{projeto/Main.vhd}
 
 \clearpage
 \subsection{Diagrama do circuito}
@@ -120,15 +121,14 @@ números aleatórios.
 Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
 \fi
 
-        Neste projeto final foi possível realizar o primeiro experimento com êxito.         
-        A solução que alcançou o resultado esperado é a referente à \textbf{versão 2}. Pode-se observar que a implementação do circuito é abstraída para um multiplexador após a implementação do circuito.
+        Neste projeto final, os objetivos foram atingidos havendo a geração de números pseudo-aleatórios. 
 
 \section{Conclusões}
 \iffalse
 Conclusões, mostrando os êxitos e eventuais problemas encontrados na realização do experimento, indicando as limitações, apresentando recomendações e/ou sugestões.
 \fi
 
-Com a realização deste experimento foi possível adquirir conhecimento a respeito de multiplexador e demultiplexador. Suas incríveis funcionalidades e reaproveitamento de circuitos com um auxílio de \textit{clocks}.
+Com a realização deste experimento foi possível adquirir conhecimento a respeito de mais funções do VHDL que facilitam o trabalho do desenvolvedor assim como de projetar um circuito na FPGA utilizando se de mais recursos e ganhar bastante conhecimento a respeito da geração de números aletórios, que consiste em conhecer a existencia outras formas e métodos de se fazer a geração e verificação destes. 
 
 \section{Referências Bibliográficas}
 \iffalse
