--- a/final/relFinal.tex
+++ b/final/relFinal.tex
@@ -101,6 +101,11 @@ números aleatórios.
 \lstinputlisting[language=vhdl]{projeto/Main.vhd}
 
 \clearpage
+\subsection{XDC}
+\lstinputlisting[language=vhdl]{projeto/Basys3_Master.xdc}
+
+
+\clearpage
 \subsection{Diagrama do circuito}
 \begin{figure}[!htb]
   \centering
