--- a/final/relFinal.tex
+++ b/final/relFinal.tex
@@ -119,14 +119,14 @@ números aleatórios.
 \subsection{Resultados}
 
 \subsection{Metodologia de testes}
-
+	Para realizar os testes, utilizamos as saídas em forma de onda para verificar se o resultados correspondiam com o que nos havíamos planejado. Para averiguar erros nos baseamos nos erros e warnings que a ferramenta fornecia para que conseguissimos repara los.
 
 \section{Discussão}
 \iffalse
 Discussão sobre os resultados encontrados, comentando detalhadamente as medições realizadas e dando a devida interpretação destas, informando se os objetivos da experimento foram alcançados. Esta é uma das partes mais importantes do relatório: aqui, há oportunidade para expressar os conhecimentos adquiridos na prática e fazer a interrelação com os fundamentos teóricos.
 \fi
 
-        Neste projeto final, os objetivos foram atingidos havendo a geração de números pseudo-aleatórios. 
+        Neste projeto final, os objetivos foram atingidos havendo a geração de números pseudo-aleatórios. Tivemos dificuldade em colocar o projeto na FPGA, principalmente pela parte de implementação desta forma não conseguimos implementar na FPGA porém as saidas em forma de onda estão correspondentes ao que se é esperado pelo projeto.  
 
 \section{Conclusões}
 \iffalse
